--- a/assets/sass/_mpwem_style.scss
+++ b/assets/sass/_mpwem_style.scss
@@ -550,9 +550,8 @@
 	.mep_event_list_item .mep-list-footer-ul { display: flex; flex-direction: row; flex-wrap: wrap; align-items: center; gap: 5px 10px; }
 	/*******************/
 	.mage_grid_box { 
-		 margin: 0;
+		margin: 0;
 		margin: 0 -7px 20px -7px;display: flex;
-		justify-content: space-between;
 		flex-wrap: wrap; 
 	}
 	.mage_grid_box .blank_div { margin: 0 20px 0 0; }
